switch to advanced JVM memory config no more need for buggy Xmx MAX_MEM